versioned_docs/version-1.1.0/references/commands/cli/settings/epinio_settings_show.md
---
title: ""
sidebar_label: "epinio settings show"
---

<head>
  <link rel="canonical" href="https://docs.epinio.io/references/commands/cli/settings/epinio_settings_show"/>
</head>
## epinio settings show

Show the current settings

```
epinio settings show [flags]
```

### Options

```
  -h, --help            help for show
      --show-password   Show hidden password
```

### Options inherited from parent commands

```
  -c, --kubeconfig string        (KUBECONFIG) path to a kubeconfig, not required in-cluster
      --no-colors                Suppress colorized output
      --settings-file string     (EPINIO_SETTINGS) set path of settings file (default "~/.config/epinio/settings.yaml")
      --skip-ssl-verification    (SKIP_SSL_VERIFICATION) Skip the verification of TLS certificates
      --timeout-multiplier int   (EPINIO_TIMEOUT_MULTIPLIER) Multiply timeouts by this factor (default 1)
      --trace-level int          (TRACE_LEVEL) Only print trace messages at or above this level (0 to 255, default 0, print nothing)
      --verbosity int            (VERBOSITY) Only print progress messages at or above this level (0 or 1, default 0)
```

### SEE ALSO

* [epinio settings](./epinio_settings.md)	 - Epinio settings management

